k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels:
    project: kiii-pern-todo
    owner: stefani22
