k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-app
spec:
  selector:
    app: todo-backend
  ports:
    - name: http
      port: 5000       # Портa на сервисот во кластерот
      targetPort: 5000 # Портa на кој слуша контејнерот во подот
  type: ClusterIP
