k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-service
  namespace: todo-app
spec:
  selector:
    app: todo-frontend
  ports:
    - name: http
      port: 3000       # Порта преку сервисот во кластерот
      targetPort: 3000 # Порта во контејнерот
  type: ClusterIP
